# justpostthings

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json  config.json  package-lock.json  package.json
crates/justpostthings-cli/: Cargo.toml
crates/justpostthings-cli/src/: main.rs
crates/justpostthings-lib/: Cargo.toml
crates/justpostthings-lib/src/: buffer.rs  claude_service.rs  gemini_service.rs  imgbb.rs  lib.rs  openai_service.rs  translation.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: ChannelSelector.svelte  DateTimePicker.svelte  IdeasPanel.svelte  ImageLightbox.svelte  ImageUploader.svelte  PostButton.svelte  PostEditor.svelte  PostPreview.svelte  Scheduler.svelte  SentPostsPanel.svelte  Settings.svelte  StatusFeedback.svelte  TranslationPreview.svelte
ui/src/lib/: api.ts  types.ts
ui/src/lib/stores/: lightbox.svelte.ts  post.svelte.ts  settings.svelte.ts
