[package]
name = "justpostthings-desktop"
version = "0.3.0"
edition = "2021"

[dependencies]
justpostthings-lib = { path = "../crates/justpostthings-lib" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
base64 = "0.22"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
