[package]
name = "justpostthings-lib"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["process"] }
base64 = "0.22"
chrono = "0.4"
